--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ theme: just-the-docs
 
 url: https://just-the-docs.github.io
 
-plugins: - jekyll-sitemap
+plugins: 
+  - jekyll-sitemap
 
 just_the_docs:
   navigation:
