--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Tan Kai Min, Russell
 description: Back-up site
 theme: just-the-docs
 
-url: https://russelltankaimin.github.io
+url: https://russelltankm.com
 
 plugins: 
   - jekyll-sitemap
