--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "Projects"
     url: /projects/    
 
-  - title: "Skills"
-    url: /skills/    
+  - title: "Experiences"
+    url: /exp/    
     
   - title: "Awards"
     url: /awards/
