--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Russell-Site"
 title_separator          : "-"
 name                     : &name "Russell Tan"
 description              : &description "personal description"
-url                      : "www.russelltankm.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://russelltankaimin.github.io/tankaimin/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "russelltankaimin/tankaimin.github.io"
 
