--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Russell-Site"
 title_separator          : "-"
 name                     : &name "Russell Tan"
 description              : &description "personal description"
-url                      : "www.russelltankm.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://russelltankaimin.github.io/tankaimin/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "tankaimin.github.io"
+repository               : "russelltankaimin/tankaimin.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
