--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Russell-Site"
 title_separator          : "-"
 name                     : &name "Russell Tan"
 description              : &description "personal description"
-url                      : "https://russelltankaimin.github.io/tankaimin/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://russelltankm.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : ""
 
@@ -27,7 +27,7 @@ author:
   bio              : "Comp Sci and Maths DDP Student @ NUS. Interested in Algorithms, A.I and Combinatorial Optimisation."
   location         : "Singapore"
   employer         : "School of Computing, NUS"
-  uri              : "www.russelltankm.com"
+  uri              : "https://russelltankm.com/"
   email            : "rtkm8168@comp.nus.edu.sg" 
 
   # Academic websites
